small usage optimization & cleanup

--- a/src/tetris/tetris.css
+++ b/src/tetris/tetris.css
@@ -965,3 +965,10 @@ footer {
         }
     }
 }
+
+/* Responsive adjustments */
+@media (max-height: 500px) {
+    header {
+        display: none;
+    }
+}
