--- a/src/tetris/tetris.css
+++ b/src/tetris/tetris.css
@@ -153,6 +153,62 @@ header {
     }
 }
 
+h1 {
+    position: relative;
+    background: linear-gradient(
+        180deg,
+        #80f 12.02%,
+        #fff 42.31%,
+        #0019ff 50%,
+        #d000ff 65.87%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #fff;
+    filter: drop-shadow(4px 4px 4px #0019ff);
+    font-size: clamp(32px, 8vw, 128px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 0;
+}
+
+#startButton {
+    font-size: clamp(24px, 5vw, 48px);
+    padding: 1em;
+    margin: 0 0.5em;
+    border: 0;
+    background: transparent;
+    margin: 0;
+    color: white;
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+    49% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
+
+.start-screen {
+    display: flex;
+    flex-direction: column;
+    place-self: center;
+    min-height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
 .score-container {
     position: fixed;
     z-index: 10;
