--- a/src/tetris/tetris.css
+++ b/src/tetris/tetris.css
@@ -30,7 +30,7 @@
     --color-pink-300: #ffa4eaff;
     --color-pink-200: #ffd4f5ff;
 
-    --background: var(--color-purple-700);
+    --primary: var(--color-purple-700);
 
     --joystick-size: 9em;
     --joystick-border-thickness: 0.75em;
@@ -64,27 +64,27 @@
 
 :root {
     &:has([data-axis='roll'].dragging) {
-        --background: var(--color-blue-500);
+        --primary: var(--color-blue-500);
     }
 
     &:has(.mode-room [data-axis='roll'].dragging) {
-        --background: var(--color-purple-500);
+        --primary: var(--color-purple-500);
     }
 
     &:has([data-axis='pitch'].dragging) {
-        --background: var(--color-cyan-500);
+        --primary: var(--color-cyan-500);
     }
 
     &:has(.mode-room [data-axis='pitch'].dragging) {
-        --background: var(--color-pink-500);
+        --primary: var(--color-pink-500);
     }
 
     &:has([data-axis='yaw'].dragging) {
-        --background: var(--color-green-500);
+        --primary: var(--color-green-500);
     }
 
     &:has(.mode-room [data-axis='yaw'].dragging) {
-        --background: var(--color-red-500);
+        --primary: var(--color-red-500);
     }
 }
 
@@ -262,8 +262,8 @@ h1 {
     }
 
     &#closeModalBtn {
-        border-color: var(--background);
-        color: var(--background);
+        border-color: var(--primary);
+        color: var(--primary);
         font-size: 0.8em;
     }
 }
@@ -874,8 +874,8 @@ footer {
 
 .outrun {
     --height: 50vh;
-    --grid-color: lch(from var(--background) calc(l + 40) c calc(h));
-    --sunset: lch(from var(--background) calc(l + 20) c h);
+    --grid-color: lch(from var(--primary) calc(l + 40) c calc(h));
+    --sunset: lch(from var(--primary) calc(l + 20) c h);
     --sun-color: lch(from var(--grid-color) 80 145 h);
     --sun-shadow: lch(from var(--grid-color) calc(l - 20) 100 h);
     position: fixed;
@@ -1039,7 +1039,7 @@ footer {
         align-items: center;
 
         &.active {
-            border: 3px solid var(--background);
+            border: 3px solid var(--primary);
         }
 
         & input {
